@@ -96,7 +96,7 @@ public abstract class AbstractTaglet extends JavaxLangModelUtilities
     protected DocTrees trees = null;
     private Map<String,URI> extern = null;
     private transient ClassLoader loader = null;
-    private transient Method dispatcher = null;
+    private transient Method href = null;
 
     {
         try {
@@ -343,10 +343,10 @@ public abstract class AbstractTaglet extends JavaxLangModelUtilities
 
     @Override
     public URI href(DocTree tag, Element context, Object target) {
-        URI href = null;
+        URI uri = null;
 
-        if (dispatcher == null) {
-            dispatcher = new Object() { }.getClass().getEnclosingMethod();
+        if (href == null) {
+            href = new Object() { }.getClass().getEnclosingMethod();
         }
 
         if (target != null) {
@@ -357,9 +357,10 @@ public abstract class AbstractTaglet extends JavaxLangModelUtilities
             try {
                 var method =
                     AbstractTaglet.class
-                    .getDeclaredMethod(dispatcher.getName(), parameters);
+                    .getDeclaredMethod(href.getName(), parameters);
 
-                if (Objects.equals(dispatcher, method)) {
+                if (Objects.equals(href, method)
+                    || (! href.getReturnType().isAssignableFrom(method.getReturnType()))) {
                     throw new NoSuchMethodException();
                 }
 
@@ -367,7 +368,7 @@ public abstract class AbstractTaglet extends JavaxLangModelUtilities
                     Stream.of(tag, context, target)
                     .toArray(Object[]::new);
 
-                href = (URI) method.invoke(this, arguments);
+                uri = (URI) method.invoke(this, arguments);
             } catch (Exception exception) {
                 print(WARNING, tag, context,
                       "No method to get href for %s",
@@ -375,7 +376,7 @@ public abstract class AbstractTaglet extends JavaxLangModelUtilities
             }
         }
 
-        return href;
+        return uri;
     }
 
     private URI href(DocTree tag, Element context, Class<?> target) {
