@@ -74,119 +74,119 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
      * {@code <a href="}{@link TypeElement type}{@code ">}{@link Node node}{@code </a>}
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   target          The target {@link TypeElement}.
      * @param   node            The child {@link Node} (may be
      *                          {@code null}).
      *
      * @return  {@link org.w3c.dom.Element}
      */
-    public FluentNode a(DocTree tag, Element element, TypeElement target, Node node);
+    public FluentNode a(DocTree tag, Element context, TypeElement target, Node node);
 
     /**
      * {@code <a href="}{@link TypeElement type}{@code ">}{@link Node node}{@code </a>}
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   target          The target {@link Class}.
      * @param   node            The child {@link Node} (may be
      *                          {@code null}).
      *
      * @return  {@link org.w3c.dom.Element}
      */
-    public FluentNode a(DocTree tag, Element element, Class<?> target, Node node);
+    public FluentNode a(DocTree tag, Element context, Class<?> target, Node node);
 
     /**
      * {@code <a href="}{@link Member}{@code ">}{@link Node node}{@code </a>}
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   target          The target {@link Member}.
      * @param   node            The child {@link Node} (may be
      *                          {@code null}).
      *
      * @return  {@link org.w3c.dom.Element}
      */
-    public FluentNode a(DocTree tag, Element element, Member target, Node node);
+    public FluentNode a(DocTree tag, Element context, Member target, Node node);
 
     /**
      * {@code <a href="}{@link TypeElement type}{@code ">}{@link Node node}{@code </a>}
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   target          The target {@link Class} name.
      * @param   node            The child {@link Node} (may be
      *                          {@code null}).
      *
      * @return  {@link org.w3c.dom.Element}
      */
-    public FluentNode a(DocTree tag, Element element, String target, Node node);
+    public FluentNode a(DocTree tag, Element context, String target, Node node);
 
     /**
      * {@code <a href="}{@link TypeElement type}{@code ">}{@code name}{@code </a>}
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   target          The target {@link Class}.
      *
      * @return  {@link org.w3c.dom.Element}
      */
-    public default FluentNode a(DocTree tag, Element element, Class<?> target) {
-        return a(tag, element, target, (String) null);
+    public default FluentNode a(DocTree tag, Element context, Class<?> target) {
+        return a(tag, context, target, (String) null);
     }
 
     /**
      * {@code <a href="}{@link Class}{@code ">}{@link #code(String) code(name)}{@code </a>}
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   target          The target {@link Class}.
      * @param   name            The link name.
      *
      * @return  {@link org.w3c.dom.Element}
      */
-    public default FluentNode a(DocTree tag, Element element, Class<?> target, String name) {
-        return a(tag, element, target, (name != null) ? code(name) : null);
+    public default FluentNode a(DocTree tag, Element context, Class<?> target, String name) {
+        return a(tag, context, target, (name != null) ? code(name) : null);
     }
 
     /**
      * {@code <a href="}{@link Member}{@code ">}{@link Member#getName()}{@code </a>}
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   target          The target {@link Member}.
      *
      * @return  {@link org.w3c.dom.Element}
      */
-    public default FluentNode a(DocTree tag, Element element, Member target) {
-        return a(tag, element, target, (String) null);
+    public default FluentNode a(DocTree tag, Element context, Member target) {
+        return a(tag, context, target, (String) null);
     }
 
     /**
      * {@code <a href="}{@link Member}{@code ">}{@link #code(String) code(name)}{@code </a>}
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   target          The target {@link Member}.
      * @param   name            The link name.
      *
      * @return  {@link org.w3c.dom.Element}
      */
-    public default FluentNode a(DocTree tag, Element element, Member target, String name) {
-        return a(tag, element, target, (name != null) ? code(name) : null);
+    public default FluentNode a(DocTree tag, Element context, Member target, String name) {
+        return a(tag, context, target, (name != null) ? code(name) : null);
     }
 
     /**
      * {@code <a href="}{@link Enum}{@code ">}{@link Enum#name() constant.name()}{@code </a>}
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   target          The target {@link Enum}.
      *
      * @return  {@link org.w3c.dom.Element}
      */
-    public default FluentNode a(DocTree tag, Element element, Enum<?> target) {
-        return a(tag, element, target.getDeclaringClass(), target.name());
+    public default FluentNode a(DocTree tag, Element context, Enum<?> target) {
+        return a(tag, context, target.getDeclaringClass(), target.name());
     }
 
     /**
@@ -194,18 +194,18 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
      * {@link #declaration(DocTree,Element,Method)} as appropriate.
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   member          The target {@link Member}.
      *
      * @return  {@link org.w3c.dom.DocumentFragment}
      */
-    public default FluentNode declaration(DocTree tag, Element element, Member member) {
+    public default FluentNode declaration(DocTree tag, Element context, Member member) {
         FluentNode node = null;
 
         if (member instanceof Field) {
-            node = declaration(tag, element, (Field) member);
+            node = declaration(tag, context, (Field) member);
         } else if (member instanceof Method) {
-            node = declaration(tag, element, (Method) member);
+            node = declaration(tag, context, (Method) member);
         } else {
             throw new IllegalArgumentException(String.valueOf(member));
         }
@@ -218,16 +218,16 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
      * hyperlinks.
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   field           The target {@link Field}.
      *
      * @return  {@link org.w3c.dom.DocumentFragment}
      */
-    public default FluentNode declaration(DocTree tag, Element element, Field field) {
+    public default FluentNode declaration(DocTree tag, Element context, Field field) {
         return fragment(modifiers(field.getModifiers()),
-                        type(tag, element, field.getGenericType()),
+                        type(tag, context, field.getGenericType()),
                         code(SPACE),
-                        a(tag, element, field, (String) null));
+                        a(tag, context, field, (String) null));
     }
 
     /**
@@ -235,17 +235,17 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
      * hyperlinks.
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   method          The target {@link Method}.
      *
      * @return  {@link org.w3c.dom.DocumentFragment}
      */
-    public default FluentNode declaration(DocTree tag, Element element, Method method) {
+    public default FluentNode declaration(DocTree tag, Element context, Method method) {
         var node =
             fragment(modifiers(method.getModifiers()),
-                     type(tag, element, method.getGenericReturnType()),
+                     type(tag, context, method.getGenericReturnType()),
                      code(SPACE),
-                     a(tag, element, method, (String) null));
+                     a(tag, context, method, (String) null));
         var parameters = method.getParameters();
 
         node.add(code("("));
@@ -255,7 +255,7 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
                 node.add(code(", "));
             }
 
-            node.add(declaration(tag, element, parameters[i]));
+            node.add(declaration(tag, context, parameters[i]));
         }
 
         node.add(code(")"));
@@ -268,14 +268,14 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
      * hyperlinks.
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   parameter       The target {@link Parameter}.
      *
      * @return  {@link org.w3c.dom.DocumentFragment}
      */
-    public default FluentNode declaration(DocTree tag, Element element, Parameter parameter) {
+    public default FluentNode declaration(DocTree tag, Element context, Parameter parameter) {
         return fragment(modifiers(parameter.getModifiers()),
-                        type(tag, element, parameter.getParameterizedType()),
+                        type(tag, context, parameter.getParameterizedType()),
                         code(SPACE),
                         code(parameter.getName()));
     }
@@ -293,19 +293,19 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
      * {@code <a href="}{@link Annotation}{@code ">}{@link #code(String) code(String.valueOf(annotation))}{@code </a>}
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   annotation      The target {@link Annotation}.
      *
      * @return  {@link org.w3c.dom.Element}
      */
-    public default FluentNode annotation(DocTree tag, Element element, Annotation annotation) {
+    public default FluentNode annotation(DocTree tag, Element context, Annotation annotation) {
         var type = annotation.annotationType();
         var string =
             String.valueOf(annotation)
             .replace(type.getCanonicalName(), type.getSimpleName())
             .replaceAll("[(][)]$", "");
 
-        return fragment().add(a(href(tag, element, type), code(string)));
+        return fragment().add(a(href(tag, context, type), code(string)));
     }
 
     /**
@@ -330,17 +330,17 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
      * Method to generate types for {@code declaration()} methods.
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   type            The target {@link Type}.
      *
      * @return  {@link org.w3c.dom.DocumentFragment}
      */
-    public default FluentNode type(DocTree tag, Element element, Type type) {
+    public default FluentNode type(DocTree tag, Element context, Type type) {
         FluentNode node = null;
 
         if (type instanceof ParameterizedType) {
             node =
-                fragment(type(tag, element, ((ParameterizedType) type).getRawType()));
+                fragment(type(tag, context, ((ParameterizedType) type).getRawType()));
 
             var types = ((ParameterizedType) type).getActualTypeArguments();
 
@@ -351,12 +351,12 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
                     node.add(code(","));
                 }
 
-                node.add(type(tag, element, types[i]));
+                node.add(type(tag, context, types[i]));
             }
 
             node.add(code(">"));
         } else if (type instanceof Class<?>) {
-            node = a(tag, element, (Class<?>) type);
+            node = a(tag, context, (Class<?>) type);
         } else {
             node = code(type.getTypeName());
         }
@@ -368,7 +368,7 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
      * {@code <table>}{@link TableModel model}{@code </table>}
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   model           The {@link TableModel} to use to create the
      *                          new table {@link org.w3c.dom.Element}.
      * @param   stream          The {@link Stream} of {@link Node}s to
@@ -377,16 +377,16 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
      *
      * @return  {@link org.w3c.dom.Element}
      */
-    public default FluentNode table(DocTree tag, Element element,
+    public default FluentNode table(DocTree tag, Element context,
                                     TableModel model, Stream<Node> stream) {
-        return table(tag, element, model, stream.toArray(Node[]::new));
+        return table(tag, context, model, stream.toArray(Node[]::new));
     }
 
     /**
      * {@code <table>}{@link TableModel model}{@code </table>}
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   model           The {@link TableModel} to use to create the
      *                          new table {@link org.w3c.dom.Element}.
      * @param   nodes           The {@link Node}s to append to the newly
@@ -395,7 +395,7 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
      *
      * @return  {@link org.w3c.dom.Element}
      */
-    public default FluentNode table(DocTree tag, Element element,
+    public default FluentNode table(DocTree tag, Element context,
                                     TableModel model, Node... nodes) {
         var table = table();
         var names =
@@ -413,7 +413,7 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
                        .boxed()
                        .map(y -> tr(IntStream.range(0, names.length)
                                     .boxed()
-                                    .map(x -> td(toHTML(tag, element,
+                                    .map(x -> td(toHTML(tag, context,
                                                         model.getValueAt(y, x))))))));
 
         return table.add(nodes);
@@ -423,12 +423,12 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
      * Method to get a Javadoc HTML representation of an {@link Object}.
      *
      * @param   tag             The context {@link DocTree}.
-     * @param   element         The context {@link Element}.
+     * @param   context         The context {@link Element}.
      * @param   object          The target {@link Object}.
      *
      * @return  {@link org.w3c.dom.Node}
      */
-    public default FluentNode toHTML(DocTree tag, Element element, Object object) {
+    public default FluentNode toHTML(DocTree tag, Element context, Object object) {
         FluentNode node = null;
 
         if (object instanceof byte[]) {
@@ -447,22 +447,22 @@ public interface JavadocHTMLTemplates extends HTMLTemplates {
         } else if (object instanceof long[]) {
             node = text(Arrays.toString((long[]) object));
         } else if (object instanceof Object[]) {
-            node = toHTML(tag, element, Arrays.asList((Object[]) object));
+            node = toHTML(tag, context, Arrays.asList((Object[]) object));
         } else if (object instanceof Type) {
-            node = type(tag, element, (Type) object);
+            node = type(tag, context, (Type) object);
         } else if (object instanceof Enum<?>) {
-            node = a(tag, element, (Enum<?>) object);
+            node = a(tag, context, (Enum<?>) object);
         } else if (object instanceof Field) {
-            node = a(tag, element, (Field) object);
+            node = a(tag, context, (Field) object);
         } else if (object instanceof Constructor) {
-            node = a(tag, element, (Constructor) object);
+            node = a(tag, context, (Constructor) object);
         } else if (object instanceof Method) {
-            node = a(tag, element, (Method) object);
+            node = a(tag, context, (Method) object);
         } else if (object instanceof Collection<?>) {
             List<Node> nodes =
                 ((Collection<?>) object)
                 .stream()
-                .map(t -> toHTML(tag, element, t))
+                .map(t -> toHTML(tag, context, t))
                 .collect(toList());
 
             for (int i = nodes.size() - 1; i > 0; i -= 1) {
