@@ -1,3 +1,8 @@
+2021-01-15  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/tools/javadoc/AbstractTaglet.java:
+	In href() dispatcher, check resolved Method's return-type.
+
 2021-01-11  Allen D. Ball  <ball@hcf.dev>
 
 	* */src/main/java/ball/tools/javadoc/JavadocHTMLTemplates.java:
